# DPI-Platform

./: .gitignore  CHANGES.md  CMakeLists.txt  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
docker/: Dockerfile.cpp
include/: dpi_engine.h  rule_manager.h
netanalyzer/: Dockerfile  INTERVIEW_PREP.md  requirements.txt
netanalyzer/app/: __init__.py  main.py
netanalyzer/app/core/: config.py  exceptions.py
netanalyzer/app/models/: analysis.py  flow.py  rules.py
netanalyzer/app/routers/: analysis.py  flows.py  rules.py
netanalyzer/app/services/: classifier.py  flow_store.py  pcap_analyzer.py  rule_engine.py  sni_extractor.py
netanalyzer/tests/: conftest.py  test_analysis.py  test_flows.py  test_rules.py  test_sni_extractor.py
src/: dpi_engine.cpp  fast_path.cpp  main_dpi.cpp  rule_manager.cpp  types.cpp
